Master branch fix

--- a/web/templates/score.html
+++ b/web/templates/score.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div id='timeUnderscript'>Time untill next game</div>
-    <div id='restart' onclick="resetAll()">restart</div>
+    <div id='restart' onclick="sendMessage('click!')">restart</div>
   </div>
 
 <div class="score-container">
