start of server

--- a/web/static/css/score.css
+++ b/web/static/css/score.css
@@ -56,7 +56,7 @@
   height: 100%;
   float: left;
   width: 10%;
-  background-color: #ffc136;
+  background-color: #5eafff;
 }
 
 #neutralbar {
@@ -84,7 +84,7 @@ h1 {
 
 #teamAtext{
   float: left;
-  color: #ffc136;
+  color: #5eafff;
 }
 
 #teamBtext{
