--- a/web/templates/score.html
+++ b/web/templates/score.html
@@ -11,7 +11,7 @@
                crossorigin="anonymous"></script>
                <!-- dafug is this -->
 
-    <script src="{{ url_for('static', filename='js/connect.js') }}" language="JavaScript"></script>
+  <!-- <script src="{{ url_for('static', filename='js/connect.js') }}" language="JavaScript"></script> -->
 
    </script>
 </head>
@@ -24,7 +24,6 @@
       </div>
     </div>
     <div id='timeUnderscript'>Time untill next game</div>
-    <div id='restart' onclick="resetAll()">restart</div>
   </div>
 
 <div class="score-container">
