--- a/web/templates/score.html
+++ b/web/templates/score.html
@@ -5,25 +5,27 @@
   <script src="{{ url_for('static', filename='js/score.js') }}" language="JavaScript"></script>
   <script src="{{ url_for('static', filename='js/resetAll.js') }}" language="JavaScript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
-               integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
-               crossorigin="anonymous"></script>
-               <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+         integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+         crossorigin="anonymous"></script>
+
+              <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
                               integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
                               crossorigin="anonymous"></script>
-                  <script type="text/javascript" charset="utf-8">
-                    var socket = io();
+              <script type="text/javascript" charset="utf-8">
+                var socket = io();
 
-                    socket.on('json', function(msg, cb) {
-
-                    });
-                    socket.on('serial', function(json_str) {
-                      const json = JSON.parse(dist_str);
-                      console.log(json);
-                      console.log(json.data);
-                      if (json.data !== undefined) {
-                      //  document.getElementById("myBar").= json.distance;
-                      }
-                    });
+                socket.on('json', function(msg, cb) {
+                  //message? subcribe to channel but nothin happens
+                });
+                socket.on('serial', function(json_str) {
+                  const json = JSON.parse(dist_str);
+                  console.log(json);
+                  console.log(json.data);
+                  if (json.data !== undefined) {
+                    alert(json.data);
+                  //  document.getElementById("myBar").= json.distance;
+                  }
+                });
 
 
   <!-- <script src="{{ url_for('static', filename='js/connect.js') }}" language="JavaScript"></script> -->
