--- a/web/templates/score.html
+++ b/web/templates/score.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/score.css') }}">
-  <script src="{{ url_for('static', filename='js/score.js') }}" language="JavaScript"></script>
+  <script src="{{ url_for('static', filename='js/score_test.js') }}" language="JavaScript"></script>
   <script src="{{ url_for('static', filename='js/resetAll.js') }}" language="JavaScript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
          integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
