--- a/web/templates/score_test.html
+++ b/web/templates/score_test.html
@@ -5,44 +5,35 @@
   <script src="{{ url_for('static', filename='js/score_test.js') }}" language="JavaScript"></script>
   <script src="{{ url_for('static', filename='js/resetAll.js') }}" language="JavaScript"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
-         integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
-         crossorigin="anonymous"></script>
-
-              <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
-                              integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
-                              crossorigin="anonymous"></script>
-              <script type="text/javascript" charset="utf-8">
-                var socket = io();
-
-                socket.on('json', function(msg, cb) {
-                  //message? subcribe to channel but nothin happens
-                });
-                socket.on('serial', function(json_str) {
-                  const json = JSON.parse(dist_str);
-                  console.log(json);
-                  console.log(json.data);
-                  if (json.data !== undefined) {
-                    alert(json.data);
-                  //  document.getElementById("myBar").= json.distance;
-                  }
-                });
-
-
-  <!-- <script src="{{ url_for('static', filename='js/connect.js') }}" language="JavaScript"></script> -->
-
-   </script>
+        integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+        crossorigin="anonymous"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"
+        integrity="sha256-yr4fRk/GU1ehYJPAs8P4JlTgu0Hdsp4ZKrx8bDEDC3I="
+        crossorigin="anonymous"></script>
+  <script type="text/javascript" charset="utf-8">
+            var socket = io();
+            socket.on('json', function(msg, cb) {
+            });
+            socket.on('serial', function(json_str) {
+              const json = JSON.parse(dist_str);
+              console.log(json);
+              console.log(json.data);
+              if (json.data !== undefined) {
+                alert(json.data);
+              //  document.getElementById("myBar").= json.distance;
+              }
+            });
+  </script>
 </head>
 <body bgcolor=#1b1d20>
-
   <div class="time-element">
     <div class='circle-time-container'>
       <div class='circle-time'>
-          <div id='time'>...</div>
+          <div id='time'>...</div> # this contains the time and will be updated
       </div>
     </div>
     <div id='timeUnderscript'>Time untill next game</div>
   </div>
-
 <div class="score-container">
   <div id="teamAbarFrozen"></div>
   <div id="teamAbar"></div>
@@ -54,8 +45,5 @@
     <h1 id="teamBtext">team B</h1>
   </div>
 </div>
-
-
-
 </body>
 </html>
